--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,9 @@
     <body>
         <div class="container">
             <h1>Have I taken my meds?</h1>
-            <input type="checkbox" id="checkbox" autocomplete="off">
-            <label class="lever" for="checkbox">
+            <p id="taken-at">&nbsp;</p>
+            <input type="checkbox" id="taken" autocomplete="off">
+            <label class="lever" for="taken" id="lever">
                 <div class="shaft">
                     <div class="handle"></div>
                 </div>
